--- a/assets/styles/view.autocomplete.css
+++ b/assets/styles/view.autocomplete.css
@@ -1,3 +1,56 @@
+.field-selectbox_link_plus .sblp-view-autocomplete select.target {
+	display: none;
+}
+
+div.sblp-autocomplete {
+	max-height: 332px;
+	overflow-y: auto;
+	overflow-x: hidden;
+	border: 1px solid #ccc;
+	margin-top: 5px;
+	position: relative;
+}
+
+div.sblp-autocomplete h3 {
+	padding: 5px;
+}
+
+div.sblp-autocomplete h3 em {
+	font-size: 10px;
+	font-weight: normal;
+	font-style: normal;
+}
+
+div.sblp-autocomplete label {
+	margin: 0;
+	padding: 5px;
+	border-bottom: 1px solid #ccc;
+	position: relative;
+}
+
+div.sblp-autocomplete label input {
+	float: left;
+}
+
+div.sblp-autocomplete span.text {
+	display: block;
+	margin-left: 20px;
+}
+
+div.sblp-autocomplete label .sblp-autocomplete-actions {
+	display: none;
+	position: absolute;
+	right: 0;
+	top: 0;
+	background: #fff;
+	padding: 5px;
+}
+
+div.sblp-autocomplete label:hover .sblp-autocomplete-actions {
+	display: inline;
+}
+
+
 .sblp_autocomplete_results {
   padding: 0px;
   border: 1px solid #999;
@@ -28,7 +81,7 @@
 }
 
 .sblp_autocomplete_loading {
-  background: white url('loading.gif') right center no-repeat;
+  /*background: white url('loading.gif') right center no-repeat;*/
 }
 
 .sblp_autocomplete_odd {
